deploy/kubernetes/GKE/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jumpstart-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      component: jumpstart
  template:
    metadata:
      labels:
        component: jumpstart
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: container
          image: digitranslab/jumpstart-ce:latest
          imagePullPolicy: Always
          args: ["npm", "run", "start:prod"]
          resources:
            limits:
              memory: "1000Mi"
              cpu: "500m"
            requests:
              memory: "1000Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              port: 3000
              path: /api/health
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
