deploy/kubernetes/GKE/postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jumpstart-postgrest
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      component: jumpstart-postgrest
  template:
    metadata:
      labels:
        component: jumpstart-postgrest
    spec:
      containers:
      - name: postgrest
        image: postgrest/postgrest:v12.0.2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jumpstart-postgrest-service
  labels:
    name: jumpstart-postgrest
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    component: jumpstart-postgrest
